# dendrite-transformer

./: .gitignore  README.md  dendrite_transformer_design_machines.md  main.py  pyproject.toml  test_position_encoding.py  train_mini.py
benchmark/: benchmark_suite.py
model/: core.py  positional_encoding.py
runner/: evaluate.py  train_cuda.py  train_mlx.py
tests/: test_core.py
yaml/: 128k_m3ultra.yaml  32k_rtx_debug.yaml  finetune_pg19.yaml
